--- a/CHEATSHEET_digimpro.tex
+++ b/CHEATSHEET_digimpro.tex
@@ -4,20 +4,20 @@
 %
 \documentclass[
 ]{article}
-\usepackage[fontsize=7pt]{fontsize}
+\usepackage[fontsize=8pt]{fontsize}
 
 \usepackage[a4paper, margin=0.5in]{geometry}
 \usepackage{lmodern}
 \usepackage{amssymb,amsmath}
 \usepackage{ifxetex,ifluatex}
 \ifnum 0\ifxetex 1\fi\ifluatex 1\fi=0 % if pdftex
-\usepackage[T1]{fontenc}
-\usepackage[utf8]{inputenc}
-\usepackage{textcomp} % provide euro and other symbols
+  \usepackage[T1]{fontenc}
+  \usepackage[utf8]{inputenc}
+  \usepackage{textcomp} % provide euro and other symbols
 \else % if luatex or xetex
-\usepackage{unicode-math}
-\defaultfontfeatures{Scale=MatchLowercase}
-\defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
+  \usepackage{unicode-math}
+  \defaultfontfeatures{Scale=MatchLowercase}
+  \defaultfontfeatures[\rmfamily]{Ligatures=TeX,Scale=1}
 \fi
 % Use upquote if available, for straight quotes in verbatim environments
 \IfFileExists{upquote.sty}{\usepackage{upquote}}{}
@@ -35,6 +35,7 @@
 }{% if KOMA class
   \KOMAoptions{parskip=half}}
 \makeatother
+\usepackage{colortbl}
 \usepackage{xcolor}
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
@@ -61,7 +62,9 @@
 
 \begin{document}
 
-\begin{longtable}[]{p{0.04\textwidth}p{0.30\textwidth}p{0.23\textwidth}p{0.38\textwidth}}
+\renewcommand{\arraystretch}{1.73}
+\arrayrulecolor{gray}
+\begin{longtable}[]{p{0.04\textwidth}p{0.29\textwidth}p{0.24\textwidth}p{0.38\textwidth}}
 \toprule
 \textbf{Symbol}
  &
@@ -74,7 +77,7 @@
 \midrule
 \endhead
 \multicolumn{4}{c}{\textbf{Homography}}
-\hline\tabularnewline
+\tabularnewline\hline
 \(\tilde{X_i^c}\)
  &
 Image coordinates
@@ -82,7 +85,7 @@ Image coordinates
 \(\tilde{X_i^c} \backsim\ \tilde{H_b^c} \cdotp \tilde{p}_i^b\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(K_c\)
  &
 Calibration matrix, Camera matrix
@@ -90,7 +93,7 @@ Calibration matrix, Camera matrix
 \(K_c = \begin{bmatrix} f_x & 0 & c_x \\ 0 & f_y & c_y \\ 0 & 0 & 1 \end{bmatrix}\)
  &
 If \(c_x=c_y=0\) the camera produces centerd images
-\hline\tabularnewline
+\tabularnewline\hline
 \(\tilde{x}\)
  &
 homogenous transformation
@@ -98,7 +101,7 @@ homogenous transformation
 \(\tilde{x}= K_c*\begin{bmatrix} x\\y\\z \end{bmatrix}\)
  &
 for direction of light rays f.e.
-\hline\tabularnewline
+\tabularnewline\hline
 \(\tilde{p}_i^b\)
  &
 Object point
@@ -107,7 +110,7 @@ Object point
  &
 Coordinates on the planar object
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(E_b^c\)
  &
 Camera extrinsic matrix
@@ -115,7 +118,7 @@ Camera extrinsic matrix
 \(E_b^c = \begin{bmatrix} R_b^c & t_{cb}^c \\ \begin{bmatrix} 0 & 0 & 0 \end{bmatrix}& 1 \end{bmatrix}\)
  &
 Relative pose between object and camera
-\hline\tabularnewline
+\tabularnewline\hline
 \(E_c^g\)
  &
 Inverse rigid motion matrix
@@ -123,7 +126,7 @@ Inverse rigid motion matrix
 \multicolumn{2}{l}{
 \(E_c^g=(E_g^c)^{-1}=\begin{bmatrix} R_g^c&t_{cg}^c\\\vec{0}&1 \end{bmatrix}=\)
 \(\begin{bmatrix} R_c^g&-R_c^gt_{cg}^c\\\vec{0}&1 \end{bmatrix}\)}
-\hline\tabularnewline
+\tabularnewline\hline
 \(R_b^c\)
  &
 Rotation matrix
@@ -131,7 +134,7 @@ Rotation matrix
 \(R_b^c=\begin{bmatrix}r_x & r_y & r_z\end{bmatrix}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(t_{cb}^c\)
  &
 Translation vector
@@ -139,7 +142,7 @@ Translation vector
 \(t_c^b=p^c-R_b^c*p^b\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(\vec{E}_g\)
  &
 Coordinate frame basis
@@ -147,7 +150,7 @@ Coordinate frame basis
 \(\vec{E}_g = \begin{bmatrix} \vec{e}_{g,x} & \vec{e}_{g,y} & \vec{e}_{g,z} \end{bmatrix}\)
  &
 A coordinate frame consists of a basis and and an origin
-\hline\tabularnewline
+\tabularnewline\hline
 \(\vec{o}_g\)
  &
 Origin of the coordinate frame
@@ -155,7 +158,7 @@ Origin of the coordinate frame
 \(\vec{o}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(\vec{p}\)
  &
 Point in the coordinate frame
@@ -163,7 +166,7 @@ Point in the coordinate frame
 \(\vec{p} = \vec{e}_{g,x} \cdotp p_x^g + \vec{e}_{g,y} \cdotp p_y^g + \vec{e}_{g,z} \cdotp p_z^g + \vec{o}_g\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(\vec{p}\)
  &
 Point in the coordinate frame
@@ -171,7 +174,7 @@ Point in the coordinate frame
 \(\vec{p} = \vec{E}_g \cdotp p^g + \vec{o}_g\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(H_b^c\)
  &
 Homography matrix
@@ -179,7 +182,7 @@ Homography matrix
 \(H_b^c \backsim\ K_c \cdotp \begin{bmatrix} r^c_{b,x} & r_{b,y}^c & t_{cb}^c \end{bmatrix}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(r_{b,x}^c\)
  &
 Rotation vector x
@@ -187,7 +190,7 @@ Rotation vector x
 \(r_{b,x}^c = \begin{bmatrix} 0 & -t_{cb,z}^c & t_{cb,y}^c \end{bmatrix}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 Object point to image point
@@ -195,9 +198,9 @@ Object point to image point
 \(\begin{bmatrix} x_{s,i} \\ y_{s,i} \\ 1 \end{bmatrix} = H_b^c \cdotp \tilde{p}_i^b\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \multicolumn{4}{c}{\textbf{Hough~transform}}
-\hline\tabularnewline
+\tabularnewline\hline
 \(x_i, y_i\)
  &
 Image space coordinates
@@ -205,7 +208,7 @@ Image space coordinates
 \(y_i = m \cdotp x_i + c \Leftrightarrow c = - m \cdotp x_i + y_i\)
  &
 Converted to parameter space, lines
-\hline\tabularnewline
+\tabularnewline\hline
 \(\theta\)
  &
 Angle of point
@@ -213,7 +216,7 @@ Angle of point
 \(\theta\)
  &
 angle between \(x\) and line in parameter space
-\hline\tabularnewline
+\tabularnewline\hline
 \(\rho\)
  &
 Proper Line Parametrization
@@ -221,7 +224,7 @@ Proper Line Parametrization
 \(\rho = x \cos(\theta) + y \sin(\theta)\)
  &
 length of line
-\hline\tabularnewline
+\tabularnewline\hline
 \(\rho\)
  &
 
@@ -229,7 +232,7 @@ length of line
 \(\rho =\begin{bmatrix}x \\ y\end{bmatrix}^t \cdot n\)
  &
 Test if a point is on a line
-\hline\tabularnewline
+\tabularnewline\hline
 \(n\)
  &
 normal vector
@@ -237,9 +240,9 @@ normal vector
 \(n = \begin{bmatrix} \cos(\theta) \\ \sin(\theta)\end{bmatrix}\)
  &
 Defined by the \(\theta\) angle
-\hline\tabularnewline
+\tabularnewline\hline
 \multicolumn{4}{c}{\textbf{RANSAC~probabilities}}
-\hline\tabularnewline
+\tabularnewline\hline
 \(\epsilon\)
  &
 Probability of picking an outlier
@@ -247,7 +250,7 @@ Probability of picking an outlier
 \(\epsilon = \dfrac{N_{outliers}}{N_{inliers} + N_{outliers}}\)
  &
 with \(N\) = no of, \(s\) = points, \(n\) = no. of trials
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 probability of picking individual inlier
@@ -255,7 +258,7 @@ probability of picking individual inlier
 \(p=1-\epsilon\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 probability of picking \(s\) inliers in sequence
@@ -263,7 +266,7 @@ probability of picking \(s\) inliers in sequence
 \(p=(1-\epsilon)^s\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 probability of not picking \(s\) inliers in sequence
@@ -271,7 +274,7 @@ probability of not picking \(s\) inliers in sequence
 \(p=1-(1-\epsilon)^s\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 probability of not picking \(s\) inliers in sequence of \(n\)
@@ -280,7 +283,7 @@ trials
 \(p=(1-(1-\epsilon)^s)^n\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 probability of picking at least in one of \(n\) trials \(s\) inliers in
@@ -289,7 +292,7 @@ sequence
 \(p_{success}=1-(1-(1-\epsilon)^s)^n\)
  &
 for lines 2 , for circles 3 points are needed
-\hline\tabularnewline
+\tabularnewline\hline
 
  &
 expected number of trials needed
@@ -297,9 +300,9 @@ expected number of trials needed
 \(n=\dfrac{log(1-p_{success})}{log(1-(1-\epsilon)^s)}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \multicolumn{4}{c}{\textbf{Geometric transformation}}
-\hline\tabularnewline
+\tabularnewline\hline
 \(\tilde{x}\)
  &
 Intersection of two lines
@@ -307,7 +310,7 @@ Intersection of two lines
 \(\tilde{x}=\tilde{I_1}\times \tilde{I_2}\)
  &
 cross product of two lines defines their intersection
-\hline\tabularnewline
+\tabularnewline\hline
 \(\tilde{I}\)
  &
 two points lie on the line
@@ -315,9 +318,9 @@ two points lie on the line
 \(\tilde{I}=\tilde{x_1}\times \tilde{x_2}\)
  &
 cross product of two points define their collective line
-\hline\tabularnewline
+\tabularnewline\hline
 \multicolumn{4}{c}{\textbf{Matrix basics}}
-\hline\tabularnewline
+\tabularnewline\hline
 \(E\)
  &
 unit matrix
@@ -325,7 +328,7 @@ unit matrix
 \(\begin{bmatrix} 1&0&0\\0&1&0\\0&0&1 \end{bmatrix}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(R^{-1}\)
  &
 Inverse rotational matrix
@@ -333,7 +336,7 @@ Inverse rotational matrix
 \(R^{-1} = R^T\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(R_x\)
  &
 Rotational matrix around x
@@ -341,7 +344,7 @@ Rotational matrix around x
 \(R_x=\begin{bmatrix} 1&0&0\\0&\cos&-\sin\\0&\sin&\cos \end{bmatrix}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(R_y\)
  &
 Rotational matrix around x
@@ -349,7 +352,7 @@ Rotational matrix around x
 \(R_y=\begin{bmatrix} \cos&0&\sin\\0&1&0\\-\sin&0&\cos \end{bmatrix}\)
  &
 
-\hline\tabularnewline
+\tabularnewline\hline
 \(R_z\)
  &
 Rotational matrix around x
@@ -357,15 +360,9 @@ Rotational matrix around x
 \(R_z=\begin{bmatrix} \cos&-\sin&0\\\sin&\cos&0\\0&0&1 \end{bmatrix}\)
  &
 
-\hline\tabularnewline
-Camera calculations
- &
-
- &
-
- &
-
-\hline\tabularnewline
+\tabularnewline\hline
+\multicolumn{4}{c}{\textbf{Camera calculations}}
+\tabularnewline\hline
 \(F\)
  &
 Focal length in {[}\(mm\){]}
@@ -374,7 +371,7 @@ Focal length in {[}\(mm\){]}
  &
 \(L=\) Length from sensor to object, \(W=\) Width from sensor to object,
 all in {[}\(mm\){]}
-\hline\tabularnewline
+\tabularnewline\hline
 \(f_x\)
  &
 Focal length in {[}\(\dfrac{pixel}{mm}\){]}
@@ -384,7 +381,7 @@ Focal length in {[}\(\dfrac{pixel}{mm}\){]}
 \(x_{pixel}=\) pixel in \(x\)-direction \(x_{chip}=\) length of sensor
 chip in \(x\)-direction, analog for \(f_y\) with \(y_{pixel}\) and
 \(y_{chip}\)
-\hline\tabularnewline
+\tabularnewline\hline
 \(f_x, f_y\)
  &
 Focal length (Assumption)
@@ -393,7 +390,7 @@ Focal length (Assumption)
  &
 In some calcuations just assume: focal length is the same in both
 directions
-\hline\tabularnewline
+\tabularnewline\hline
 \(c_x, c_y\)
  &
 image center coordinates
